July 16, 2009:
(mxPath) renamed 'start' argument of mxPath() to 'values'
	renamed 'name' argument of mxPath() to 'labels'
	renamed 'boundMin' argument of mxPath() to 'lbound'
	renamed 'boundMax' argument of mxPath() to 'ubound'
	eliminated 'ciLower' argument of mxPath()
	eliminated 'ciUpper' argument of mxPath()
	eliminated 'description' argument of mxPath()

(dimnames) implemented dimnames(x) for MxMatrix objects
	implemented dimnames(x) <- value for MxMatrix objects
	implemented dimnames(x) for MxAlgebra objects
	implemented dimnames(x) <- value for MxAlgebra objects

July 15, 2009:
(mxData) renamed 'vector' argument of mxData() to 'means'