@@ -45,27 +45,78 @@ setMethod("omxObjFunNamespace", signature("MxFIMLObjective"),
 		return(.Object)
 })
 
+verifyExpectedNames <- function(covName, meansName, flatModel) {
+	if (is.na(meansName)) {
+		means <- NA
+	} else {
+		means <- flatModel[[meansName]]
+	}
+	covariance <- flatModel[[covName]]
+	covariance <- dimnames(covariance)
+	if (is.null(covariance)) {
+			msg <- paste("The expected covariance matrix associated",
+				"with the MxFIMLObjective in model", 
+				omxQuotes(flatModel@name), "does not contain dimnames.")
+			stop(msg, call.=FALSE)	
+	}
+	covRows <- covariance[[1]]
+	covCols <- covariance[[2]]
+	if ((length(covRows) != length(covCols)) || !all(covRows == covCols)) {
+			msg <- paste("The expected covariance matrix associated",
+				"with the MxFIMLObjective in model", 
+				omxQuotes(flatModel@name), "does not contain identical",
+				"row and column dimnames.")
+			stop(msg, call.=FALSE)
+	}
+	if (is.na(means)) return()
+	means <- dimnames(means)
+	if (is.null(covariance)) {
+			msg <- paste("The expected means matrix associated",
+				"with the MxFIMLObjective in model", 
+				omxQuotes(flatModel@name), "does not contain dimnames.")
+			stop(msg, call.=FALSE)	
+	}
+	meanCols <- means[[2]]
+	if ((length(covCols) != length(meanCols)) || !all(covCols == meanCols)) {
+			msg <- paste("The expected covariance and expected",
+				"means matrices associated",
+				"with the MxFIMLObjective in model", 
+				omxQuotes(flatModel@name), "do not contain identical",
+				"dimnames.")
+			stop(msg, call.=FALSE)
+	}
+}
 
 setMethod("omxObjFunConvert", signature("MxFIMLObjective"), 
 	function(.Object, flatModel, model) {
 		name <- .Object@name
 		if(is.na(.Object@data)) {
-			msg <- paste("The MxFIMLObjective", omxQuotes(name),
+			msg <- paste("The MxFIMLObjective",
 				"does not have a dataset associated with it in model",
 				omxQuotes(flatModel@name))
 			stop(msg, call.=FALSE)
 		}
-		if(flatModel@datasets[[.Object@data]]@type != 'raw') {
-			msg <- paste("The dataset associated with MxFIMLObjective", 
-				omxQuotes(name), "in model", 
-				omxQuotes(flatModel@name), "is not raw data.")
+		if (flatModel@datasets[[.Object@data]]@type != 'raw') {
+			msg <- paste("The dataset associated with the MxFIMLObjective", 
+				"in model", omxQuotes(flatModel@name), "is not raw data.")
 			stop(msg, call.=FALSE)
 		}
-		if(!is.na(.Object@means)) {
+		dataNames <- dimnames(flatModel@datasets[[.Object@data]]@matrix)
+		if (is.null(dataNames)) {
+			msg <- paste("The dataset associated with the MxFIMLObjective", 
+				"in model", omxQuotes(flatModel@name), 
+				"does not contain column names (use dimnames).")
+			stop(msg, call.=FALSE)
+		}
+		columnNames <- dataNames[[2]]
+		meansName <- .Object@means
+		covName <- .Object@covariance
+		if(!is.na(.Object@means)) {			
 			.Object@means <- omxLocateIndex(flatModel, .Object@means, name)
 		}
 		.Object@covariance <- omxLocateIndex(flatModel, .Object@covariance, name)
 		.Object@data <- omxLocateIndex(flatModel, .Object@data, name)
+		verifyExpectedNames(covName, meansName, flatModel)
 		.Object@definitionVars <- generateDefinitionList(flatModel)
 		return(.Object)
 })
